proj1/tests/correct/def.py
def A(a):
    pass
print 'str'

