proj1/tests/error/simpleidentifiers.py
def foo(x, (y, z)):
    pass
print 'str'

